added additional pages

--- a/.prettierignore
+++ b/.prettierignore
@@ -2,3 +2,16 @@ node_modules
 build
 dist
 public
+.DS_Store
+node_modules
+.npm
+/build
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+
+# Ignore files for PNPM, NPM
+package-lock.json
+
