--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vite": "^6.2.6"
   },
   "dependencies": {
+    "@lucide/svelte": "^0.507.0",
     "@tailwindcss/vite": "^4.1.4",
     "tailwindcss": "^4.1.4",
     "zod": "^3.24.3"
