--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sveltejs/adapter-auto": "^6.0.0",
     "@sveltejs/kit": "^2.16.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@types/node": "^22.15.3",
     "autoprefixer": "^10.4.21",
     "prettier": "^3.5.3",
     "prettier-plugin-svelte": "^3.3.3",
