--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,5 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
-    command: ["npm", "run", "preview", "--", "--host", "0.0.0.0" , "--port", "3000"]
+    command:
+      ["npm", "run", "preview", "--", "--host", "0.0.0.0", "--port", "3000"]
