--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-	"cSpell.words": ["snackbars"]
+	"cSpell.words": [
+        "bulkdelete",
+        "disablestudentslist",
+        "generalcall",
+        "multiclass",
+        "offlinepayment",
+        "onlinestudent",
+        "snackbars",
+        "studentfee",
+        "visitorspurpose"
+    ]
 }
