table component created

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "bulkdelete",
         "disablestudentslist",
         "generalcall",
+        "lucide",
         "multiclass",
         "offlinepayment",
         "onlinestudent",
