--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,3 @@
 {
-	"cSpell.words": [
-        "bulkdelete",
-        "disablestudentslist",
-        "generalcall",
-        "lucide",
-        "multiclass",
-        "offlinepayment",
-        "onlinestudent",
-        "snackbars",
-        "studentfee",
-        "visitorspurpose"
-    ]
+	"cSpell.words": ["bulkdelete", "disablestudentslist", "generalcall", "lucide", "multiclass", "offlinepayment", "onlinestudent", "snackbars", "studentfee", "visitorspurpose"]
 }
