--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,27 @@
 {
     "rewrites": [
         {
-            "source": "/api/(.*)",
-            "destination": "https://school-management-api-izm4.onrender.com/$1",
-            "headers": {
-                "X-Forwarded-Host": "online-school-management-sigma.vercel.app",
-                "X-Forwarded-Proto": "https"
-            }
+            "source": "/api/:path*",
+            "destination": "https://school-management-api-izm4.onrender.com/api/:path*"
+        }
+    ],
+    "headers": [
+        {
+            "source": "/api/:path*",
+            "headers": [
+                {
+                    "key": "Access-Control-Allow-Origin",
+                    "value": "*"
+                },
+                {
+                    "key": "Access-Control-Allow-Methods",
+                    "value": "GET,POST,PUT,DELETE,OPTIONS"
+                },
+                {
+                    "key": "Access-Control-Allow-Headers",
+                    "value": "Content-Type"
+                }
+            ]
         }
     ]
 }
