--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,18 @@
 {
     "rewrites": [
-        {
-            "source": "/api/:path*",
-            "destination": "https://school-management-api-izm4.onrender.com/api/:path*"
-        }
+      {
+        "source": "/api/:path*",
+        "destination": "https://school-management-api-izm4.onrender.com/api/:path*"
+      }
     ],
     "headers": [
-        {
-            "source": "/api/:path*",
-            "headers": [
-                {
-                    "key": "Access-Control-Allow-Origin",
-                    "value": "*"
-                },
-                {
-                    "key": "Access-Control-Allow-Methods",
-                    "value": "GET,POST,PUT,DELETE,OPTIONS"
-                },
-                {
-                    "key": "Access-Control-Allow-Headers",
-                    "value": "Content-Type"
-                }
-            ]
-        }
+      {
+        "source": "/api/:path*",
+        "headers": [
+          { "key": "Access-Control-Allow-Origin", "value": "*" },
+          { "key": "Access-Control-Allow-Methods", "value": "GET,POST,PUT,DELETE,OPTIONS" },
+          { "key": "Access-Control-Allow-Headers", "value": "Content-Type" }
+        ]
+      }
     ]
-}
+  }
