--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,28 @@
 {
+    "version": 2,
     "rewrites": [
-      {
-        "source": "/api/:path*",
-        "destination": "https://school-management-api-izm4.onrender.com/api/:path*"
-      }
+        {
+            "source": "/api/(.*)",
+            "destination": "https://school-management-api-izm4.onrender.com/api/$1"
+        }
     ],
     "headers": [
-      {
-        "source": "/api/:path*",
-        "headers": [
-          { "key": "Access-Control-Allow-Origin", "value": "*" },
-          { "key": "Access-Control-Allow-Methods", "value": "GET,POST,PUT,DELETE,OPTIONS" },
-          { "key": "Access-Control-Allow-Headers", "value": "Content-Type" }
-        ]
-      }
+        {
+            "source": "/api/(.*)",
+            "headers": [
+                {
+                    "key": "Access-Control-Allow-Origin",
+                    "value": "*"
+                },
+                {
+                    "key": "Access-Control-Allow-Methods",
+                    "value": "GET,POST,PUT,DELETE,OPTIONS"
+                },
+                {
+                    "key": "Access-Control-Allow-Headers",
+                    "value": "X-Requested-With, Content-Type, Authorization"
+                }
+            ]
+        }
     ]
-  }
+}
