--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
-    "version": 2,
     "rewrites": [
         {
             "source": "/api/(.*)",
@@ -12,15 +11,11 @@
             "headers": [
                 {
                     "key": "Access-Control-Allow-Origin",
-                    "value": "*"
+                    "value": "https://online-school-management-sigma.vercel.app"
                 },
                 {
-                    "key": "Access-Control-Allow-Methods",
-                    "value": "GET,POST,PUT,DELETE,OPTIONS"
-                },
-                {
-                    "key": "Access-Control-Allow-Headers",
-                    "value": "X-Requested-With, Content-Type, Authorization"
+                    "key": "Access-Control-Allow-Credentials",
+                    "value": "true"
                 }
             ]
         }
