--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "https://school-management-api-izm4.onrender.com/api/$1"
+            "destination": "https://school-management-api-izm4.onrender.com/$1"
         }
     ],
     "headers": [
@@ -16,6 +16,14 @@
                 {
                     "key": "Access-Control-Allow-Credentials",
                     "value": "true"
+                },
+                {
+                    "key": "Access-Control-Allow-Methods",
+                    "value": "GET,POST,PUT,DELETE,OPTIONS"
+                },
+                {
+                    "key": "Access-Control-Allow-Headers",
+                    "value": "Content-Type, Authorization"
                 }
             ]
         }
