--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "https://school-management-api-izm4.onrender.com/$1"
+            "destination": "https://school-management-api-izm4.onrender.com/api/$1"
         }
     ],
     "headers": [
