--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	},
 	"dependencies": {
 		"@lucide/svelte": "^0.507.0",
+		"moment": "^2.30.1",
 		"pdfjs-dist": "^5.3.31",
 		"uploadthing": "^7.7.2",
 		"zod": "^3.24.3"
