--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,19 @@
 {
-	"printWidth": 400,
+	"plugins": ["prettier-plugin-svelte"],
 	"semi": true,
-	"singleQuote": false,
+	"singleQuote": true,
+	"svelteSortOrder": "options-scripts-markup-styles",
 	"svelteStrictMode": false,
-	"svelteBracketNewLine": true,
+	"svelteBracketNewLine": false,
 	"svelteAllowShorthand": true,
 	"svelteIndentScriptAndStyle": true,
-	"plugins": ["prettier-plugin-svelte"]
+	"printWidth": 400,
+	"overrides": [
+		{
+			"files": "*.svelte",
+			"options": {
+				"parser": "svelte"
+			}
+		}
+	]
 }
