--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"format": "npx prettier --write ."
+		"format": "npx prettier --write . && npm run format:css",
+		"format:css": "node format-css.mjs",
+		"format:css2": "cross-env find . -name '*.svelte' -exec sed -i'' -e '/<style>/,/</style>/ { /^[[:space:]]*\\..*{/ { :a; N; /}/!ba; s/\\n[[:space:]]*/ /g; } }' {} \\;"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^6.0.0",
@@ -18,8 +20,10 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@types/node": "^22.15.3",
 		"autoprefixer": "^10.4.21",
+		"cross-env": "^7.0.3",
+		"glob": "^11.0.3",
 		"prettier": "^3.5.3",
-		"prettier-plugin-svelte": "^3.3.3",
+		"prettier-plugin-svelte": "^3.4.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"svelte-preprocess": "^6.0.3",
