--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "npx prettier --write .",
 		"format:css": "node format-css.mjs",
-		"format-all": "npx prettier --write . && npm run format:css",
-		"format:css2": "cross-env find . -name '*.svelte' -exec sed -i'' -e '/<style>/,/</style>/ { /^[[:space:]]*\\..*{/ { :a; N; /}/!ba; s/\\n[[:space:]]*/ /g; } }' {} \\;"
+		"format-all": "npx prettier --write . && npm run format:css"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^6.0.0",
