--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	},
 	"dependencies": {
 		"@lucide/svelte": "^0.507.0",
+		"chart.js": "^4.5.0",
 		"moment": "^2.30.1",
 		"pdfjs-dist": "^5.3.31",
 		"uploadthing": "^7.7.2",
